Implemented remaining query executor methods